--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "ant-design-vue": "^1.3.16",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "eslint-loader": "^3.0.2",
     "js-md5": "^0.7.3",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "mint-ui": "^2.2.13",
     "register-service-worker": "^1.6.2",
+    "sa-sdk-javascript": "^1.14.13",
     "swiper": "^5.1.0",
     "vue": "^2.6.10",
     "vue-audio": "^0.0.12",
