--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "axios": "^0.19.0",
     "clipboard": "^2.0.4",
     "core-js": "^2.6.5",
+    "install": "^0.13.0",
     "js-md5": "^0.7.3",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "npm": "^6.13.0",
     "register-service-worker": "^1.6.2",
+    "sa-sdk-javascript": "^1.14.13",
     "swiper": "^5.1.0",
     "vue": "^2.6.10",
     "vue-audio": "^0.0.12",
